# DevCycle

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TESTING.md  alembic.ini  config.env  config.env.template  create_test_schema.sql  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-fastapi-users.txt  requirements.txt  run_e2e_tests.py  run_tests.bat  run_tests.py  setup.cfg
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_fastapi_users_schema.py
config/: development.env  production.env  staging.env  testing.env
devcycle/: __init__.py
devcycle/agents/: __init__.py  base.py  business_analyst.py
devcycle/api/: __init__.py  app.py  models.py  versioning.py
devcycle/api/auth/: __init__.py  endpoints.py  sessions.py
devcycle/api/middleware/: csrf_protection.py  security_logging.py
devcycle/api/routes/: __init__.py  acp.py  agents.py  audit.py  health.py  messages.py  websocket.py
devcycle/cli/: secret_manager.py
devcycle/core/: __init__.py  config.py  dependencies.py  errors.py  logging.py  redis.py
devcycle/core/acp/: __init__.py  config.py  models.py  persistence.py
devcycle/core/agents/: lifecycle.py  models.py
devcycle/core/auth/: __init__.py  decorators.py  fastapi_users.py  models.py  password.py  secure_jwt_strategy.py  session_monitor.py  token_blacklist.py  tortoise_fastapi_users.py  tortoise_models.py
devcycle/core/cache/: __init__.py  acp_cache.py  redis_cache.py
devcycle/core/config/: __init__.py  loader.py  settings.py
devcycle/core/database/: __init__.py  connection.py  models.py  tortoise_config.py  tortoise_schemas.py
devcycle/core/messaging/: __init__.py  config.py  factory.py  middleware.py  responses.py  validation.py  validation_errors.py
devcycle/core/models/: __init__.py  acp_models.py  tortoise_models.py
devcycle/core/monitoring/: __init__.py  security_monitor.py
devcycle/core/protocols/: __init__.py  message.py
devcycle/core/repositories/: __init__.py  agent_repository.py  base.py  factory.py  user_repository.py
devcycle/core/secrets/: gcp_secret_manager.py  secret_config.py
devcycle/core/services/: __init__.py  agent_availability_service.py  agent_service.py  (+4 more)
devcycle/huggingface/: README.md  __init__.py  cli.py  client.py  space.py  workspace.py
devcycle/monitoring/: acp_monitor.py
docs/: agent-integration-plan.md  agent-lifecycle-management.md  agent-system-architecture.md  api-documentation.md  configuration-management.md  database-setup.md  index.md  kafka-setup.md  logging-and-monitoring.md  redis-caching.md  security-monitoring.md
docs/api/: authentication.md  endpoints.md  overview.md  testing.md
docs/architecture/: overview.md  system-diagrams.md  technical-specifications.md
docs/contributing/: contributing.md
docs/development/: ci-cd.md  code-quality.md  guidelines.md  standards.md  workflows.md
docs/getting-started/: installation.md  project-structure.md  quick-start.md
examples/: README.md  api_client_demo.py  api_client_demo_logged.py  business_analyst_demo.py  huggingface_workspace_setup.py  kafka_messaging_demo.py  logging_utils.py  message_protocol_demo.py  redis_caching_demo.py
gcp/: SECRET_ROTATION_SETUP.md  deploy-secret-rotation.sh
gcp/cloud-scheduler/: database-password-rotation.yaml  huggingface-token-rotation.yaml  jwt-secret-rotation.yaml  redis-password-rotation.yaml  secret-rotation-schedule.yaml  secret-validation.yaml
gcp/deployment/: Dockerfile  README.md  cloud-run.yaml  compute-engine-deployment.yaml  compute-engine.yaml  deploy.sh  load-balancer-ingress.yaml  load-balancer-service.yaml  load-balancer.yaml
kibana/: acp-dashboard.json  security-dashboard.json  security-index-pattern.json
logstash/pipeline/: acp-logs.conf
logstash/templates/: acp-logs-template.json
scripts/: README.md  init-db.sql  run-tests.py  setup-kibana.sh  start-database.bat  start-database.sh  start-kafka.bat  start-kafka.sh  test-db-connection.py
stubs/confluent_kafka/: admin.pyi
tests/: README.md  __init__.py  conftest.py  conftest_testcontainers.py  test_base_agent.py  test_business_analyst.py  test_error_handling.py  test_huggingface.py  test_kafka_messaging.py  test_kafka_routing.py  test_logging.py  test_message_protocol.py
tests/api/: test_auth_endpoints.py  test_auth_sessions.py  test_health.py
tests/e2e/: __init__.py  config.py  conftest.py  test_agent_e2e.py  test_auth_fastapi_users_e2e.py  test_auth_sqlite.py  test_health_e2e.py  test_redis_e2e.py  test_secret_management_e2e.py  test_simple_e2e.py
tests/integration/: __init__.py  conftest.py  test_acp_api.py  test_acp_integration.py  test_agent_service_lifecycle_integration.py  test_kafka_messaging.py  test_kafka_routing.py  test_redis_integration.py  test_secret_integration.py
tests/performance/: __init__.py  conftest.py  test_acp_performance.py  test_redis_performance_benchmarks.py  test_redis_performance_integration.py
tests/shared/: __init__.py  testcontainers.py
tests/unit/: __init__.py  conftest.py  test_acp_models.py  test_advanced_caching.py  test_agent_availability_service.py  test_agent_availability_service_redis.py  test_agent_lifecycle.py  test_agent_management.py  test_agent_service.py  test_agent_validation.py  test_base_agent.py  test_business_analyst.py  test_connection_pool_memory_optimization.py  test_cors_configuration.py  test_error_handling.py  test_fastapi_validation.py  test_gcp_secret_manager.py  test_health.py  test_huggingface.py  test_input_validation.py  test_logging.py  test_message_middleware.py  test_message_protocol.py  test_message_validation.py  test_message_validation_errors.py  test_performance_metrics.py  test_redis_acp_cache.py  test_redis_acp_events.py  test_redis_cache.py  test_repositories_base.py  test_repositories_factory.py  test_repositories_user.py  test_secret_cli.py  test_secret_config.py  test_secret_management.py  test_security.py  test_security_monitoring.py  test_services_base.py  test_services_factory.py  test_services_user.py  (+4 more)
(+29 files in other folders)
